# restful-api-python

./: .gitignore  app.py  config.py  extensions.py  pyproject.toml  seed.py  users.sql
api/: views.py
api/resources/: user.py
api/schemas/: user.py
instance/: db.sqlite3
migrations/versions/: c7294c7435c8_initial_migrate.py  e4321a2ed5a2_.py
models/: users.py
